--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Bump version and push tag
         uses: mathieudutour/github-tag-action@v6.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT_TOKEN }}
